--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <td onclick="calc.negate();">&plusmn;</td>
                     <td class="calc-buttons-numbers" onclick="calc.addDigit(0);">0</td>
                     <td onclick="calc.addComma();">,</td>
-                    <td onclick="calc.equate();">=</td>
+                    <td onclick="calc.addOperation('=');">=</td>
                 </tr>
             </table>
         </div>
