--- a/index.html
+++ b/index.html
@@ -4,72 +4,15 @@
     <meta charset="UTF-8">
     <title>Calc</title>
 
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/calc.css">
 
 </head>
 <body>
 
-<div class="calc-body" id="calc">
-    <div>
-        <div class="calc-display">
-            <div class="calc-display-formula">
-
-            </div>
-            <div class="calc-display-result">
-                0
-            </div>
-        </div>
-        <div class="calc-memory-controls">
-            <span class="disabled" onclick="calc.accessMemory('clear');">MC</span>
-            <span class="disabled" onclick="calc.accessMemory('show');">MR</span>
-            <span onclick="calc.accessMemory('add');">M+</span>
-            <span onclick="calc.accessMemory('sub');">M-</span>
-            <span onclick="calc.accessMemory('save');">MS</span>
-            <span class="disabled">M*</span>
-        </div>
-        <div class="calc-buttons">
-            <table>
-                <tr>
-                    <td onclick="calc.addOperation('%');">%</td>
-                    <td onclick="calc.addOperation('sqrt');">&radic;</td>
-                    <td onclick="calc.addOperation('sqr');">x<sup>2</sup></td>
-                    <td onclick="calc.addOperation('1/x');"><sup>1</sup>&frasl;<sub>x</sub></td>
-                </tr>
-                <tr>
-                    <td onclick="calc.clearEntry();">CE</td>
-                    <td onclick="calc.clearData();">C</td>
-                    <td onclick="calc.removeDigit();"><img src="images/bs.png" alt=""></td>
-                    <td onclick="calc.addOperation('/');">&divide;</td>
-                </tr>
-                <tr>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(7);">7</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(8);">8</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(9);">9</td>
-                    <td onclick="calc.addOperation('*');">&times;</td>
-                </tr>
-                <tr>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(4);">4</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(5);">5</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(6);">6</td>
-                    <td onclick="calc.addOperation('-');">-</td>
-                </tr>
-                <tr>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(1);">1</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(2);">2</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(3);">3</td>
-                    <td onclick="calc.addOperation('+');">+</td>
-                </tr>
-                <tr>
-                    <td onclick="calc.negate();">&plusmn;</td>
-                    <td class="calc-buttons-numbers" onclick="calc.addDigit(0);">0</td>
-                    <td onclick="calc.addComma();">,</td>
-                    <td onclick="calc.addOperation('=');">=</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</div>
+<div id="calc"></div>
 
 <script src="js/calc.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
